--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -24,6 +24,7 @@ reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
 reth-node-builder.workspace = true
+reth-evm.workspace = true
 reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
@@ -31,9 +32,10 @@ reth-optimism-primitives.workspace = true
 reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
+reth-optimism-evm.workspace = true
 reth-primitives-traits = { workspace = true, optional = true  }
 reth-primitives.workspace = true
-reth-tracing = { workspace = true, optional = true }
+reth-tracing.workspace = true
 reth-optimism-forks.workspace = true
 reth-rpc-engine-api.workspace = true
 reth-provider.workspace = true
@@ -43,6 +45,7 @@ reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
+reth-network-api.workspace = true
 
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
@@ -61,17 +64,19 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
 world-chain-builder-rpc.workspace = true
 world-chain-builder-pool = { workspace = true, features = ["test"] }
+world-chain-builder-test-utils.workspace = true
+world-chain-builder-node = { workspace = true, features = ["test"] }
 
+reth-db.workspace = true
 reth-e2e-test-utils.workspace = true
-reth-evm.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
-reth-optimism-evm.workspace = true
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-primitives.workspace = true
@@ -101,7 +106,6 @@ test = [
     "world-chain-builder-pbh",
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
-    "dep:reth-tracing",
     "dep:reth-primitives-traits",
     "dep:reth-prune-types",
     "dep:reth-trie",
@@ -112,3 +116,7 @@ test = [
     "dep:futures",
     "dep:chrono",
 ]
+
+[[test]]
+name = "e2e-testsuite"
+path = "tests/e2e-testsuite/main.rs"
