--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -8,14 +8,14 @@ optimism_package:
     - participants:
       - el_type: op-geth
         cl_type: op-node
-        el_image: world-chain-node:latest
         el_builder_type: custom
         el_builder_image: world-chain-builder:latest
-      - el_type: custom
-        cl_type: op-node
-      - el_type: custom
-        cl_type: op-node
-        el_image: world-chain-node:latest
+        cl_builder_type: op-node
+      - el_builder_type: custom
+        el_builder_image: world-chain-builder:latest
+        cl_builder_type: op-node
+        count: 2
+        
       network_params: 
         seconds_per_slot: 2
         fjord_time_offset: 0
