fix: forkchoiceUpdated namespace

--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -61,7 +61,7 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-rand.workspace = true
+rand = { workspace = true, optional = true}
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -98,6 +98,7 @@ tower.workspace = true
 jsonrpsee.workspace = true
 parking_lot.workspace = true
 serde.workspace = true
+rand.workspace = true
 
 [features]
 default = []
@@ -114,6 +115,7 @@ test = [
     "dep:alloy-eips",
     "dep:revm-primitives",
     "dep:futures",
+    "dep:rand",
     "dep:chrono",
 ]
 
