--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "crates/world/pbh",
     "crates/world/pool",
     "crates/world/test-utils",
+    "crates/world/provider",
     "crates/world/chainspec",
     "crates/tests/sepolia",
     "crates/tests/devnet",
@@ -35,6 +36,7 @@ lto = "fat"
 [workspace.dependencies]
 # internal
 world-chain-builder-node = { path = "crates/world/node" }
+world-chain-provider = { path = "crates/world/provider" }
 world-chain-builder-pbh = { path = "crates/world/pbh" }
 world-chain-builder-payload = { path = "crates/world/payload" }
 world-chain-builder-rpc = { path = "crates/world/rpc" }
