--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -24,6 +24,7 @@ flashblocks-p2p.workspace = true
 reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
+reth-payload-util.workspace = true
 reth-node-builder.workspace = true
 reth-evm.workspace = true
 reth-engine-local.workspace = true
@@ -121,4 +122,3 @@ test = [
 [[test]]
 name = "e2e-testsuite"
 path = "tests/e2e-testsuite/main.rs"
-
