--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -54,6 +54,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-rpc-types.workspace = true
 alloy-sol-types = { workspace = true, optional = true }
+alloy-consensus.workspace = true
 
 op-alloy-rpc-types-engine.workspace = true
 op-alloy-consensus.workspace = true
