--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -19,7 +19,6 @@ reth-payload-util.workspace = true
 reth-evm.workspace = true
 reth-node-api.workspace = true
 reth-node-builder.workspace = true
-reth-rpc.workspace = true
 reth-rpc-eth-api.workspace = true
 reth-rpc-eth-types.workspace = true
 reth-storage-api.workspace = true
@@ -49,6 +48,10 @@ flashblocks-p2p.workspace = true
 
 # tokio
 tokio.workspace = true
+
+# metrics
+metrics.workspace = true
+metrics-derive.workspace = true
 
 # misc
 parking_lot.workspace = true
