--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -29,13 +29,11 @@ reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
 reth-optimism-primitives.workspace = true
-reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
 reth-optimism-evm.workspace = true
 reth-primitives-traits = { workspace = true, optional = true  }
 reth-primitives.workspace = true
-reth-tracing.workspace = true
 reth-optimism-forks.workspace = true
 reth-rpc-engine-api.workspace = true
 reth-provider.workspace = true
@@ -45,7 +43,6 @@ reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
-reth-network-api.workspace = true
 
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
@@ -64,7 +61,7 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-rand.workspace = true
+rand = { workspace = true, optional = true}
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -80,6 +77,8 @@ reth-optimism-consensus.workspace = true
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-primitives.workspace = true
+reth-tracing.workspace = true
+reth-network-api.workspace = true
 
 alloy-genesis.workspace = true
 alloy-network.workspace = true
@@ -90,6 +89,7 @@ alloy-consensus.workspace = true
 
 tokio-tungstenite.workspace = true
 tokio-util.workspace = true
+
 criterion.workspace = true
 semaphore-rs = { workspace = true, features = ["depth_30"] }
 serde_json.workspace = true
@@ -98,6 +98,7 @@ tower.workspace = true
 jsonrpsee.workspace = true
 parking_lot.workspace = true
 serde.workspace = true
+rand.workspace = true
 
 [features]
 default = []
@@ -114,6 +115,7 @@ test = [
     "dep:alloy-eips",
     "dep:revm-primitives",
     "dep:futures",
+    "dep:rand",
     "dep:chrono",
 ]
 
