Osiris/eth api test actions (#288)
* Osiris/flashblocks devnet (#279)

* wip: kurtosis integration

* wip

* wip

* feat: setup flashblocks devnet

* fix: forkchoiceUpdated namespace

* feat: devnet functional

* chore: add metrics

* fix: extra data field at isthmus

* wip

* chore: fix unused imports

* chore: clippy

* fix: fee accrual & jobs generator poll logic

* fix: turn off pruner

* feat: change attribute transaction assumptions in

--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -38,6 +38,7 @@ reth-optimism-chainspec.workspace = true
 
 # alloy
 alloy-consensus.workspace = true
+alloy-rlp.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 op-alloy-consensus.workspace = true
@@ -51,6 +52,10 @@ flashblocks-p2p.workspace = true
 
 # tokio
 tokio.workspace = true
+
+# metrics
+metrics.workspace = true
+metrics-derive.workspace = true
 
 # misc
 parking_lot.workspace = true
