--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -31,13 +31,11 @@ reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
 reth-optimism-primitives.workspace = true
-reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
 reth-optimism-evm.workspace = true
 reth-primitives-traits = { workspace = true, optional = true }
 reth-primitives.workspace = true
-reth-tracing.workspace = true
 reth-optimism-forks.workspace = true
 reth-rpc-engine-api.workspace = true
 reth-provider.workspace = true
@@ -47,7 +45,6 @@ reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
-reth-network-api.workspace = true
 
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
@@ -67,7 +64,7 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-rand.workspace = true
+rand = { workspace = true, optional = true}
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -83,6 +80,8 @@ reth-optimism-consensus.workspace = true
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-primitives.workspace = true
+reth-tracing.workspace = true
+reth-network-api.workspace = true
 
 alloy-genesis.workspace = true
 alloy-network.workspace = true
@@ -93,6 +92,7 @@ alloy-consensus.workspace = true
 
 tokio-tungstenite.workspace = true
 tokio-util.workspace = true
+
 criterion.workspace = true
 semaphore-rs = { workspace = true, features = ["depth_30"] }
 serde_json.workspace = true
@@ -101,6 +101,7 @@ tower.workspace = true
 jsonrpsee.workspace = true
 parking_lot.workspace = true
 serde.workspace = true
+rand.workspace = true
 
 [features]
 default = []
@@ -117,6 +118,7 @@ test = [
     "dep:alloy-eips",
     "dep:revm-primitives",
     "dep:futures",
+    "dep:rand",
     "dep:chrono",
 ]
 
