--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -94,7 +94,7 @@ tokio-tungstenite.workspace = true
 tokio-util.workspace = true
 
 criterion.workspace = true
-semaphore-rs = { workspace = true, features = ["depth_30"] }
+semaphore-rs.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
 tower.workspace = true
