--- a/crates/world/pbh/Cargo.toml
+++ b/crates/world/pbh/Cargo.toml
@@ -9,7 +9,7 @@ alloy-primitives = { workspace = true, features = ["rlp"] }
 
 chrono = { workspace = true }
 thiserror = { workspace = true }
-semaphore-rs = { workspace = true, features = ["depth_30"] }
+semaphore-rs.workspace = true
 semaphore-rs-proof.workspace = true
 strum.workspace = true
 serde.workspace = true
