--- a/crates/toolkit/Cargo.toml
+++ b/crates/toolkit/Cargo.toml
@@ -19,7 +19,7 @@ clap = { workspace = true }
 eyre = { workspace = true }
 hex = { workspace = true }
 reqwest = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 dotenvy = { workspace = true }
