--- a/crates/toolkit/Cargo.toml
+++ b/crates/toolkit/Cargo.toml
@@ -21,7 +21,7 @@ hex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-tokio = { workspace = true, features = ["full"] }
+tokio = { workspace = true }
 dotenvy = { workspace = true }
 chrono = { workspace = true }
 rand = { workspace = true }
