--- a/crates/world/pbh/Cargo.toml
+++ b/crates/world/pbh/Cargo.toml
@@ -7,8 +7,8 @@ edition.workspace = true
 alloy-rlp = { workspace = true, features = ["derive"] }
 alloy-primitives = { workspace = true, features = ["rlp"] }
 
-chrono = { workspace = true }
-thiserror = { workspace = true }
+chrono.workspace = true
+thiserror.workspace = true
 semaphore-rs.workspace = true
 semaphore-rs-proof.workspace = true
 strum.workspace = true
