--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -71,9 +71,7 @@ tokio.workspace = true
 # rpc
 serde_json.workspace = true
 
-# test-utils dependencies
-reth-e2e-test-utils = { workspace = true, optional = true }
-alloy-genesis = { workspace = true, optional = true }
+# optional
 tikv-jemallocator = { workspace = true, optional = true }
 
 [dev-dependencies]
