--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -13,7 +13,6 @@ workspace = true
 [dependencies]
 world-chain-builder-payload.workspace = true
 world-chain-builder-pool.workspace = true
-world-chain-builder-test-utils = { workspace = true, optional = true }
 world-chain-builder-pbh = { workspace = true, optional = true }
 world-chain-builder-flashblocks.workspace = true
 world-chain-provider.workspace = true
@@ -64,7 +63,7 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-rand = { workspace = true, optional = true}
+rand = { workspace = true, optional = true }
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -106,7 +105,7 @@ rand.workspace = true
 [features]
 default = []
 test = [
-    "world-chain-builder-test-utils",
+    # "world-chain-builder-test-utils",
     "world-chain-builder-pbh",
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
