--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -37,7 +37,7 @@ reth-evm.workspace = true
 reth-revm.workspace = true
 reth-trie-db.workspace = true
 reth-rpc-server-types.workspace = true
-reth-tasks = { workspace = true, optional = true }
+reth-tasks.workspace = true
 
 # op-reth
 reth-optimism-cli.workspace = true
