feat: move test_utils into sep crate

--- a/crates/world/pool/Cargo.toml
+++ b/crates/world/pool/Cargo.toml
@@ -9,8 +9,6 @@ repository.workspace = true
 
 [dependencies]
 world-chain-builder-pbh.workspace = true
-world-chain-builder-flashblocks.workspace = true
-world-chain-provider.workspace = true
 
 reth.workspace = true
 reth-db.workspace = true
@@ -42,10 +40,8 @@ serde.workspace = true
 
 [dev-dependencies]
 world-chain-builder-test-utils.workspace = true
-ethers-core.workspace = true
+reth-transaction-pool.workspace = true
 test-case.workspace = true
-alloy-signer-local.workspace = true
-reth-e2e-test-utils.workspace = true
 chrono.workspace = true
 eyre.workspace = true
 
