--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,7 +139,9 @@ alloy-eips = { version = "1.0.23", default-features = false }
 alloy-genesis = { version = "1.0.24", default-features = false }
 alloy-rpc-types-debug = "1.0.23"
 alloy-signer = { version = "1.0.23", default-features = false }
-alloy-signer-local = { version = "1.0.23", default-features = false }
+alloy-signer-local = { version = "1.0.23", default-features = false, features = [
+    "mnemonic",
+] }
 alloy-sol-types = "1.3.0"
 alloy-serde = { version = "1.0.11", default-features = false }
 
