--- a/crates/world/test-utils/Cargo.toml
+++ b/crates/world/test-utils/Cargo.toml
@@ -34,7 +34,7 @@ alloy-genesis.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 alloy-sol-types.workspace = true
-alloy-signer-local = { workspace = true, features = ["mnemonic"] }
+alloy-signer-local = { workspace = true }
 alloy-signer.workspace = true
 alloy-network.workspace = true
 alloy-rpc-types.workspace = true
