--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,13 +128,16 @@ alloy-network = { version = "1.0.23", default-features = false }
 alloy-primitives = { version = "1.3.0", default-features = false, features = [
     "rand",
     "arbitrary",
+    "rlp",
 ] }
 alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
 alloy-rpc-types = { version = "1.0.23", features = [
     "eth",
 ], default-features = false }
 alloy-rpc-types-engine = { version = "1.0.23" }
-alloy-rlp = { version = "0.3.10", default-features = false }
+alloy-rlp = { version = "0.3.10", default-features = false, features = [
+    "derive",
+] }
 alloy-eips = { version = "1.0.23", default-features = false }
 alloy-genesis = { version = "1.0.24", default-features = false }
 alloy-rpc-types-debug = "1.0.23"
