--- a/crates/world/pbh/Cargo.toml
+++ b/crates/world/pbh/Cargo.toml
@@ -4,8 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-alloy-rlp = { workspace = true, features = ["derive"] }
-alloy-primitives = { workspace = true, features = ["rlp"] }
+alloy-rlp = { workspace = true }
+alloy-primitives = { workspace = true }
 
 chrono.workspace = true
 thiserror.workspace = true
