--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "world-chain-builder-test-utils"
+name = "world-chain-test"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
