--- a/crates/world/pool/Cargo.toml
+++ b/crates/world/pool/Cargo.toml
@@ -39,7 +39,7 @@ rayon.workspace = true
 serde.workspace = true
 
 [dev-dependencies]
-world-chain-builder-test-utils.workspace = true
+world-chain-test.workspace = true
 reth-transaction-pool.workspace = true
 test-case.workspace = true
 chrono.workspace = true
