--- a/crates/world/test-e2e/Cargo.toml
+++ b/crates/world/test-e2e/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "world-chain-builder-node"
+name = "world-chain-test-e2e"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -15,12 +15,14 @@ world-chain-builder-payload.workspace = true
 world-chain-builder-pool.workspace = true
 world-chain-builder-flashblocks.workspace = true
 world-chain-provider.workspace = true
+world-chain-test.workspace = true
 
 rollup-boost.workspace = true
 flashblocks-p2p.workspace = true
 
 reth.workspace = true
 reth-node-builder.workspace = true
+reth-node-core.workspace = true
 reth-evm.workspace = true
 reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
@@ -36,6 +38,7 @@ reth-provider.workspace = true
 reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-node-api.workspace = true
+reth-e2e-test-utils.workspace = true
 
 alloy-primitives.workspace = true
 alloy-rpc-types-eth.workspace = true
@@ -50,20 +53,14 @@ eyre.workspace = true
 clap.workspace = true
 tracing.workspace = true
 
-[dev-dependencies]
 world-chain-builder-pbh.workspace = true
 world-chain-builder-rpc.workspace = true
-world-chain-builder-pool.workspace = true
-world-chain-test.workspace = true
 world-chain-builder-node.workspace = true
 
 reth-db.workspace = true
-reth-e2e-test-utils.workspace = true
-reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
-reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth-network-api.workspace = true
 
@@ -72,7 +69,6 @@ alloy-network.workspace = true
 alloy-signer-local.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-engine.workspace = true
-alloy-consensus.workspace = true
 
 tokio-tungstenite.workspace = true
 tokio-util.workspace = true
@@ -86,7 +82,3 @@ jsonrpsee.workspace = true
 parking_lot.workspace = true
 serde.workspace = true
 rand.workspace = true
-
-[[test]]
-name = "e2e-testsuite"
-path = "tests/e2e-testsuite/main.rs"
