--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -55,6 +55,7 @@ alloy-consensus.workspace = true
 
 op-alloy-rpc-types-engine.workspace = true
 op-alloy-consensus.workspace = true
+op-alloy-network.workspace = true
 
 revm-primitives = { workspace = true, optional = true }
 
@@ -65,6 +66,8 @@ clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
 rand = { workspace = true, optional = true}
+tower.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
